components/frontend/envs/staging/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/fiaisis/frontend@sha256:6985c644b9a8f99443159afaa6e7a06a83cc5178c4cc55286698a1788596f183
